<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:hint="@string/name"
                android:inputType="text"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameWrapper">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_wrapper">

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneWrapper">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:maxLength="10"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/rePasswordWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordWrapper">

            <EditText
                android:id="@+id/re_password"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/please_user_combination_of_alphabets_and_numbers"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rePasswordWrapper" />


        <Button
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="60dp"
            android:background="@color/colorPrimary"
            android:text="@string/hop_up"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rePasswordWrapper" />


    </android.support.constraint.ConstraintLayout>

</layout>