<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnsubmit"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/code"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:hint="@string/xxxxx"
            android:inputType="number"
            android:maxLength="6"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/btnsubmit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/a_code_was_sent_to_you_by_sms_please_enter_that_code_below_and_press_done_to_complete_registration"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/code"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/if_you_don_t_receive_code_in_30_seconds_then_please_press_the_resend_button"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="@+id/btnsubmit"
            app:layout_constraintRight_toRightOf="@+id/btnsubmit"
            app:layout_constraintTop_toBottomOf="@id/btnsubmit" />

        <Button
            android:id="@+id/btnresend"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="36dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimary"
            android:text="@string/resend"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="@+id/textView"
            app:layout_constraintRight_toRightOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@id/textView" />

    </android.support.constraint.ConstraintLayout>
</layout>