<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <View
            android:id="@+id/separator"
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/titleWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="12dp"
                android:hint="@string/title"
                android:inputType="text"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:gravity="top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="10"
            android:maxLines="10"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleWrapper" />


        <Spinner
            android:id="@+id/categories"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/quantityWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categories">

            <EditText
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:gravity="top"
                android:hint="@string/quantity"
                android:inputType="number"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <HorizontalScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quantityWrapper">

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/add_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/black_straight_border"
                    android:padding="8dp"
                    android:src="@android:drawable/ic_input_add"
                    android:tint="@android:color/darker_gray" />

            </LinearLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/separator"
            app:layout_constraintTop_toBottomOf="@+id/scrollView" />

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/add"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toRightOf="@+id/separator"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView" />

    </android.support.constraint.ConstraintLayout>

</layout>